--- a/frontend/eUprava/src/app/app.component.html
+++ b/frontend/eUprava/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg blue">
     <div class="nav mr-auto">
-      <a class="navbar-brand pStranica white" href="#" routerLink="/" routerLinkActive="active">Početna stranica</a>
+      <a class="navbar-brand pStranica white" href="#" routerLink="/" routerLinkActive="active">eUprava</a>
       <a class="nav-item nav-link white" href="#" routerLink="/tuzilastvo" routerLinkActive="active" >Tužilaštvo</a>
       <a class="nav-item nav-link white" href="#" routerLink="/mup" routerLinkActive="active" >MUP</a>
       <a class="nav-item nav-link white" href="#"  routerLinkActive="active" routerLink="/granicnaPolicija" >Granična policija</a>
