--- a/frontend/eUprava/src/app/home-page/home-page.component.html
+++ b/frontend/eUprava/src/app/home-page/home-page.component.html
@@ -1,13 +1,15 @@
 <br/>
 <br/>
+Routeri u navbaru treba da budu skriveni ako korisnik nije ulogovan
+Tj. treba da vidi samo login
 <div class="container">
   <div [hidden]="submitted">
     <form #userForm="ngForm">
 
       <div class="row">
-        <div class="col-md-10 offset-md-1">
+        <div class="col-md-5 offset-md-3">
           <div class="form-group">
-            <label for="username">Username</label>
+            <label for="username">JMBG</label>
             <input type="text" class="form-control" id="username" required [(ngModel)]="user.username" name="name"
               #name="ngModel" pattern="^(?=[a-z0-9._]{5,25}$)(?!.*[_.]{2})[^_.].*[^_.]$">
             <div [hidden]="name.valid || !name.touched" class="alert alert-danger">
@@ -17,10 +19,12 @@
         </div>
       </div>
 
+      <br/>
+
       <div class="row">
-        <div class="col-md-10 offset-md-1">
+        <div class="col-md-5 offset-md-3">
           <div class="form-group">
-            <label for="password">Password</label>
+            <label for="password">Lozinka</label>
             <input type="password" class="form-control" id="password" required [(ngModel)]="user.password"
               name="password" #password="ngModel"
               pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[,@$!._?&-])[A-Za-z\d,@$!._?&-]{8,}$">
@@ -40,7 +44,7 @@
       <br/>
 
       <div class="row">
-        <div class="col-md-10 offset-md-1">
+        <div class="col-md-1 offset-md-3">
           <button type="button" class="btn btn-success btn-block" [disabled]="!userForm.form.valid"
             (click)="login()">Login</button>
         </div>
