--- a/frontend/eUprava/src/app/Tuzilastvo-Komponente/tuzilastvo/tuzilastvo.component.html
+++ b/frontend/eUprava/src/app/Tuzilastvo-Komponente/tuzilastvo/tuzilastvo.component.html
@@ -19,6 +19,8 @@
                         <th scope="col">Zanimanje</th>
                         <th scope="col">Broj telefona</th>
                         <th scope="col">Mesto prebivalista</th>
+                        <th scope="col"></th>
+                        
                     </tr>
                 </thead>
                 <tbody>
@@ -36,6 +38,10 @@
                         <td>{{ prijava.optuzeni.zanimanje }}</td>
                         <td>{{ prijava.optuzeni.brTelefona }}</td>
                         <td class="mestoT">{{ prijava.optuzeni.mestoPrebivalista.naziv }} {{ prijava.optuzeni.mestoPrebivalista.ulica }}  {{ prijava.optuzeni.mestoPrebivalista.broj }}</td>
+                        <td>
+                            <button type="button" class="btn btn-success" style="margin-bottom: 2px;" (click)="openPrihvati(prihvatanje, prijava.id)">Prihvati</button>
+                            <button type="button" class="btn btn-danger" (click)="openOdbaci(odbacivanje, prijava.id)">Odbaci</button>
+                        </td>
                     </tr>
                 </tbody>
             </table>
@@ -43,3 +49,32 @@
     </div>
 </div>
 
+<ng-template #odbacivanje let-modal>
+	<div class="modal-header" style="background-color: #f2f2f2; font-weight: bold;">
+		<h4 class="modal-title" id="odbaci" style=" font-weight: bold;">Potvrdi odbacivanje krivicne prijave</h4>
+		<button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+	</div>
+	<div class="modal-body" style="background-color: #f2f2f2;">
+		<form>
+			<p>Da li ste sigurni da želite da odbacite krivičnu prijavu?</p>
+		</form>
+	</div>
+	<div class="modal-footer" style="background-color: #f2f2f2;">
+		<button type="button" class="btn btn-success success" (click)="modal.close('Save click')">Potvrdi</button>
+	</div>
+</ng-template>
+
+<ng-template #prihvatanje let-modals>
+	<div class="modal-header" style="background-color: #f2f2f2;">
+		<h4 class="modal-title" id="prihvati" style=" font-weight: bold;">Potvrdi kreiranje optuznice</h4>
+		<button type="button" class="btn-close" aria-label="Close" (click)="modals.dismiss('Cross click')"></button>
+	</div>
+	<div class="modal-body" style="background-color: #f2f2f2;">
+		<form>
+			<p>Da li ste sigurni da želite da kreirate optuznicu na osnovu ove krivicne prijave?</p>
+		</form>
+	</div>
+	<div class="modal-footer" style="background-color: #f2f2f2;">
+		<button type="button" class="btn btn-success success" (click)="modals.close('Save click')">Potvrdi</button>
+	</div>
+</ng-template>
