dodata neka verzija single sign on i funkcionalnost za mup na frontu

--- a/frontend/eUprava/src/app/home-page/home-page.component.html
+++ b/frontend/eUprava/src/app/home-page/home-page.component.html
@@ -11,9 +11,9 @@ Tj. treba da vidi samo login
           <div class="form-group">
             <label for="username">JMBG</label>
             <input type="text" class="form-control" id="username" required [(ngModel)]="user.username" name="name"
-              #name="ngModel" pattern="^(?=[a-z0-9._]{5,25}$)(?!.*[_.]{2})[^_.].*[^_.]$">
+              #name="ngModel" pattern="^[0-9]{5,13}$">
             <div [hidden]="name.valid || !name.touched" class="alert alert-danger">
-              Username is required
+              JMBG is required
             </div>
           </div>
         </div>
@@ -27,7 +27,7 @@ Tj. treba da vidi samo login
             <label for="password">Lozinka</label>
             <input type="password" class="form-control" id="password" required [(ngModel)]="user.password"
               name="password" #password="ngModel"
-              pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[,@$!._?&-])[A-Za-z\d,@$!._?&-]{8,}$">
+              pattern="^[a-zA-Z0-9]{4,25}$">
             <div [hidden]="password.valid || !password.touched" class="alert alert-danger">
               Password is required
             </div>
