--- a/frontend/eUprava/src/styles.css
+++ b/frontend/eUprava/src/styles.css
@@ -41,3 +41,8 @@ footer {
     text-align: center;
     color: #f2f2f2;
 }
+
+.thSort:hover {
+    cursor:pointer;
+    background-color: #f2f2f2;
+}
