--- a/frontend/eUprava/src/app/Tuzilastvo-Komponente/tuzilastvo/tuzilastvo.component.html
+++ b/frontend/eUprava/src/app/Tuzilastvo-Komponente/tuzilastvo/tuzilastvo.component.html
@@ -2,8 +2,8 @@
 <br/>
 <div class="container">
         <div class="row">
-                <div ngbDropdown class="d-inline-block">
-                        <button type="button" class="btn btn-primary prikaz" id="dropdownBasic1" ngbDropdownToggle>
+                <div ngbDropdown class="col-md-1" >
+                        <button type="button" class="btn btn-primary prikaz" id="dropdownBasic1" ngbDropdownToggle [hidden]="meni == 'Građanin' ">
                                 Prikaži:
                         </button>
                         <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
@@ -11,9 +11,12 @@
                                 <button ngbDropdownItem (click)="prikaziPrijave()">Krivične prijave</button>
                         </div>
                 </div>
+                <div class="col-md-1 offset-md-10">
+                        <button type="button" class="btn btn-primary prikaz" (click)="toggleMeni()">{{meni}}</button>
+                </div>
         </div>
     <br/>
-    <div class="row" [hidden]="prikazOptuznice == true">
+    <div class="row" [hidden]="prikazOptuznice == true || meni == 'Građanin' ">
         <div class="md-col">
             <table class="table table-striped">
                 <thead>
@@ -59,7 +62,7 @@
             </table>
         </div>
     </div>
-    <br/>
+
 
     <!-- <br/>
     <div class="row" [hidden]="prikazOptuznice == true"> 
@@ -70,7 +73,7 @@
     </div>
     <br/> -->
 
-    <form #searchForm="ngForm" [hidden]="prikazOptuznice == true">
+    <form #searchForm="ngForm" [hidden]="prikazOptuznice == true || meni == 'Tužilac'" >
 
         <div class="row">
           <div class="col-md-3" style="margin-left: 15px;">
@@ -101,53 +104,13 @@
           </div>
 
         </div>
+        <br/>
     </form>         
-    <br/>
+ 
 
     <!-- <h3 [hidden]="prikazOptuznice == true">Prikaz javnih prijava (za gradjanina)</h3> -->
-        <div class="row" [hidden]="prikazOptuznice == true">
-                <div class="md-col">
-                <table class="table table-striped">
-                        <thead>
-                        <tr>
-                                <th scope="col">Krivicna prijava</th>
-                                <!-- <th scope="col">Privatnost</th> -->
-                                <th scope="col" sortable="clanZakonika" (sort)="onSortJavne($event)" class="thSort">Clan zakonika</th>
-                                <th scope="col" sortable="datum" (sort)="onSortJavne($event)" class="thSort">Datum</th>
-                                <th scope="col" sortable="mestoPrijave" (sort)="onSortJavne($event)" class="thSort">Mesto prijave</th>
-                                <th scope="col">Obrazlozenje</th>
-                                <th scope="col">Status</th>
-                                <th scope="col">Optuzeni</th>
-                                <th scope="col">Datum rodjenja</th>
-                                <th scope="col">Jmbg</th>
-                                <th scope="col">Zanimanje</th>
-                                <th scope="col">Broj telefona</th>
-                                <th scope="col">Mesto prebivalista</th>
-                                
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr *ngFor="let prijava of javnePrijave; index as i">
-                                <th scope="row" class="prijavaT">{{ i + 1 }}</th>
-                                <!-- <td>{{ prijava.privatnost }}</td> -->
-                                <td>{{ prijava.clanZakonika }}</td>
-                                <td>{{ prijava.datum }}</td>
-                                <td>{{ prijava.mestoPrijave }}</td>
-                                <td>{{ prijava.obrazlozenje }}</td>
-                                <td>{{ prijava.status | status }}</td>
-                                <td class="optuzeniT">{{ prijava.optuzeni.ime }} {{ prijava.optuzeni.prezime }}</td>
-                                <td>{{ prijava.optuzeni.datumRodjenja }}</td>
-                                <td>{{ prijava.optuzeni.jmbg }}</td>
-                                <td>{{ prijava.optuzeni.zanimanje }}</td>
-                                <td>{{ prijava.optuzeni.brTelefona }}</td>
-                                <td class="mestoT">{{ prijava.optuzeni.mestoPrebivalista.naziv }}, {{ prijava.optuzeni.mestoPrebivalista.ulica }}  {{ prijava.optuzeni.mestoPrebivalista.broj }}</td>
-                        </tr>
-                        </tbody>
-                </table>
-                </div>
-        </div>
 
-        <div class="row" [hidden]="prikazOptuznice == false">
+        <div class="row" [hidden]="prikazOptuznice == false || meni == 'Građanin'">
                 <div class="md-col">
                     <table class="table table-striped">
                         <thead>
@@ -193,6 +156,52 @@
                     </table>
                 </div>
             </div>
+
+</div>
+
+<div class="container" [hidden]="meni == 'Tužilac' ">
+     
+        <div class="row" [hidden]="prikazOptuznice == true">
+                <div class="md-col">
+                <table class="table table-striped">
+                        <thead>
+                        <tr>
+                                <th scope="col">Krivicna prijava</th>
+                                <!-- <th scope="col">Privatnost</th> -->
+                                <th scope="col" sortable="clanZakonika" (sort)="onSortJavne($event)" class="thSort">Clan zakonika</th>
+                                <th scope="col" sortable="datum" (sort)="onSortJavne($event)" class="thSort">Datum</th>
+                                <th scope="col" sortable="mestoPrijave" (sort)="onSortJavne($event)" class="thSort">Mesto prijave</th>
+                                <th scope="col">Obrazlozenje</th>
+                                <th scope="col">Status</th>
+                                <th scope="col">Optuzeni</th>
+                                <th scope="col">Datum rodjenja</th>
+                                <th scope="col">Jmbg</th>
+                                <th scope="col">Zanimanje</th>
+                                <th scope="col">Broj telefona</th>
+                                <th scope="col">Mesto prebivalista</th>
+                                
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr *ngFor="let prijava of javnePrijave; index as i">
+                                <th scope="row" class="prijavaT">{{ i + 1 }}</th>
+                                <!-- <td>{{ prijava.privatnost }}</td> -->
+                                <td>{{ prijava.clanZakonika }}</td>
+                                <td>{{ prijava.datum }}</td>
+                                <td>{{ prijava.mestoPrijave }}</td>
+                                <td>{{ prijava.obrazlozenje }}</td>
+                                <td>{{ prijava.status | status }}</td>
+                                <td class="optuzeniT">{{ prijava.optuzeni.ime }} {{ prijava.optuzeni.prezime }}</td>
+                                <td>{{ prijava.optuzeni.datumRodjenja }}</td>
+                                <td>{{ prijava.optuzeni.jmbg }}</td>
+                                <td>{{ prijava.optuzeni.zanimanje }}</td>
+                                <td>{{ prijava.optuzeni.brTelefona }}</td>
+                                <td class="mestoT">{{ prijava.optuzeni.mestoPrebivalista.naziv }}, {{ prijava.optuzeni.mestoPrebivalista.ulica }}  {{ prijava.optuzeni.mestoPrebivalista.broj }}</td>
+                        </tr>
+                        </tbody>
+                </table>
+                </div>
+        </div>
 
 </div>
 
