--- a/frontend/eUprava/src/app/app.component.html
+++ b/frontend/eUprava/src/app/app.component.html
@@ -1,10 +1,11 @@
 <nav class="navbar navbar-expand-lg blue">
     <div class="nav mr-auto">
       <a class="navbar-brand pStranica white" href="#" routerLink="/" routerLinkActive="active">eUprava</a>
-      <a class="nav-item nav-link white" href="#" routerLink="/tuzilastvo" routerLinkActive="active" >Tužilaštvo</a>
-      <a class="nav-item nav-link white" href="#" routerLink="/mup" routerLinkActive="active" >MUP</a>
-      <a class="nav-item nav-link white" href="#"  routerLinkActive="active" routerLink="/granicnaPolicija" >Granična policija</a>
-      <a class="nav-item nav-link white" href="#"  routerLinkActive="active" routerLink="/sudstvo" >Sudstvo</a>
+      <a class="nav-item nav-link white" href="#" routerLink="/tuzilastvo" routerLinkActive="active" [hidden]="!s.getLogged()">Tužilaštvo</a>
+      <a class="nav-item nav-link white" href="#" routerLink="/mup" routerLinkActive="active" [hidden]="!s.getLogged()">MUP</a>
+      <a class="nav-item nav-link white" href="#"  routerLinkActive="active" routerLink="/granicnaPolicija" [hidden]="!s.getLogged()">Granična policija</a>
+      <a class="nav-item nav-link white" href="#"  routerLinkActive="active" routerLink="/sudstvo" [hidden]="!s.getLogged()">Sudstvo</a>
+      <a class="nav-item nav-link white" href="#"  routerLinkActive="active" routerLink="/logout"[hidden]="!s.getLogged()">Log out</a>
     </div>
   </nav>
 <router-outlet></router-outlet>
