ispravljena greska nesto za port na beku

--- a/frontend/eUprava/src/app/app.component.html
+++ b/frontend/eUprava/src/app/app.component.html
@@ -4,7 +4,7 @@
       <a class="nav-item nav-link white" href="#" routerLink="/tuzilastvo" routerLinkActive="active" [hidden]="!s.getLogged()">Tužilaštvo</a>
       <a class="nav-item nav-link white" href="#" routerLink="/mup" routerLinkActive="active" [hidden]="!s.getLogged()">MUP</a>
       <a class="nav-item nav-link white" href="#"  routerLinkActive="active" routerLink="/granicnaPolicija" [hidden]="!s.getLogged()">Granična policija</a>
-      <a class="nav-item nav-link white" href="#"  routerLinkActive="active" routerLink="/sudstvo" [hidden]="!s.getLogged()">Sudstvo</a>
+      <a class="nav-item nav-link white" href="#"  routerLink="/sudstvo" routerLinkActive="active" [hidden]="!s.getLogged()">Sudstvo</a>
       <a class="nav-item nav-link white" href="#"  routerLinkActive="active" routerLink="/logout"[hidden]="!s.getLogged()">Log out</a>
     </div>
   </nav>
