--- a/frontend/eUprava/src/app/sudstvo_components/side-bar/side-bar.component.html
+++ b/frontend/eUprava/src/app/sudstvo_components/side-bar/side-bar.component.html
@@ -15,3 +15,18 @@
     </div>
     
 </div>
+<div class="sidebar">
+    <div style="text-align: left" style="margin-top: 50px">
+        <button class="btn btn-secondary btn-sm"(click)="registerSudija()">Create Sudija</button>
+    </div>
+    <div class="view" style="margin-top: 20px;">
+        <app-view-sudije></app-view-sudije>
+    </div>
+    
+</div>
+<div class="sidebar">
+    <div class="view" style="margin-top: 20px;">
+        <app-view-optuznice></app-view-optuznice>
+    </div>
+    
+</div>
