--- a/frontend/eUprava/src/app/sudstvo_components/poternice/poternice-list/poternice-list.component.html
+++ b/frontend/eUprava/src/app/sudstvo_components/poternice/poternice-list/poternice-list.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="text-center my-5">
-        <h1 class="fw-bolder">Poternica:  {{poternica.ime}}</h1>
+        <h1 class="fw-bolder">Poternica:  {{poternica.naslov}}</h1>
 
         <p class="lead mb-0">{{poternica.opis}}</p>
     </div>
