--- a/frontend/eUprava/src/app/sudstvo_components/poternice/view-poternice/view-poternice.component.html
+++ b/frontend/eUprava/src/app/sudstvo_components/poternice/view-poternice/view-poternice.component.html
@@ -3,7 +3,7 @@
     <div class="card-body">
       <ul>
         <li *ngFor="let poternica of poternice">
-          <a routerLink="/poternice-list/{{poternica.id}}">{{poternica.id}}</a>
+          <a routerLink="/poternice-list/{{poternica.id}}">{{poternica.sudijaId}}</a>
         </li>
       </ul>
     </div>
