prikaz poternica i izmena fronta

--- a/frontend/eUprava/src/app/sudstvo_components/rocista/view-rociste/view-rociste.component.html
+++ b/frontend/eUprava/src/app/sudstvo_components/rocista/view-rociste/view-rociste.component.html
@@ -1,20 +1,11 @@
-<!-- <div class="card mb-4">
-    <div class="card-header">Rocista:</div>
-    <div class="card-body">
-      <ul>
-        <li *ngFor="let rociste of rocista">
-          <a routerLink="/rociste-list/{{rociste.id}}">{{rociste.datum}}</a>
-        </li>
-      </ul>
-    </div>
-   -->
+
 
    <div class="container">
       
     <table class="table table-striped">  
       <thead>  
           <tr>  
-            <th>sudijaId</th>  
+            <th>SudijaId</th>  
             <th>Datum</th>  
             <th>Mesto</th>  
             <th>Sud</th>
